# wamr-binding

./: .gitmodules  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
src/: errMsg.h  main.cc  objDecorator.cc  objDecorator.h  objWrapper.cc  objWrapper.h
test/: test.js  test.wasm
